WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/ControleAtribuicaoComercial__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IdFilaRoleta__c</fullName>
        <label>Id da fila roleta</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdUltimoComercial__c</fullName>
        <inlineHelpText>Registra o ultimo comercial meuSucesso.com que recebe lead pela roleta. Se estiver vazio pega o primeiro registro da tabela de usuários que seja do Departamento &quot;comercial&quot; e Empresa &quot;meuSucesso.com&quot; em ordem alfabética.</inlineHelpText>
        <label>Id ultimo Comercial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimiteLeads__c</fullName>
        <defaultValue>35</defaultValue>
        <inlineHelpText>Quantidade de Lead em que um comercial meuSucesso.com pode receber por dia. Por padrão o campo é preenchido com 35.</inlineHelpText>
        <label>Limite diário Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Controle Atribuição Comercial</label>
</CustomObject>